# rtt-gazebo-embedded

./: CMakeLists.txt  README.md  gazebo_ros  gz_test.ops  package.xml  rtt_gazebo.cc  rtt_gazebo_embedded.cc
example/: CMakeLists.txt  gz_test.ops  model_plugin_example.cpp
include/rtt_gazebo_embedded/: rtt_gazebo_embedded.hh
src/: rtt_gazebo_embedded.cc
