<package>
  <name>rtt_gazebo_embedded</name>
  <version>1.0.0</version>
  <license>BSD</license>
  <maintainer email="hoarau@isir.upmc.fr">Antoine Hoarau</maintainer>
  <description>
    Gazebo wrapped in an orocos component.
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build deps are queried automatically with orocos_use_package() -->
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  
  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>

  <export>
  </export>
</package>
